# cobwebAI-backend

./: .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_12_13_1810-1f7f26981b6d_initial_migration.py  2024_12_13_2040-b03aabdbf581_add_operation_metadata.py  2024_12_15_1426-b864a6591469_update_database.py  2024_12_15_1644-50b6a388d945_fix_correct_answer_type.py  2024_12_16_1806-9189e203a0a8_add_message_order.py
cobweb_ai/: __init__.py  __main__.py  log.py  settings.py
cobweb_ai/db/: base.py  utils.py
cobweb_ai/db/models/: __init__.py  users.py
cobweb_ai/services/: __init__.py
cobweb_ai/web/: __init__.py  application.py  lifespan.py
cobweb_ai/web/api/: __init__.py  router.py
cobweb_ai/web/api/echo/: __init__.py  views.py
cobweb_ai/web/api/monitoring/: __init__.py
cobweb_ai/web/api/users/: __init__.py  views.py
cobwebai/: __main__.py  app.py  auth.py  log.py  settings.py
cobwebai/api/: auth.py  llm.py  projects.py  router.py  utils.py
cobwebai/dependecies/: database.py
cobwebai/dependencies/: database.py  socket_manager.py  storage.py
cobwebai/models/: __init__.py  chat.py  file.py  message.py  note.py  operations.py  podcast.py  project.py  question.py  test.py  user.py
cobwebai/repositories/: file_repository.py  note_repository.py  project_repository.py  user_repository.py
cobwebai/repository/: __init__.py  chats.py  files.py  notes.py  operations.py  projects.py  tests.py
cobwebai/routes/: __init__.py  auth.py  chat.py  files.py  llm.py  notes.py  operations.py  projects.py  tests.py  websockets.py
cobwebai/schemas/: chats.py  files.py  notes.py  operations.py  projects.py  tests.py
cobwebai/tasks/: __init__.py  generate_note.py  generate_test.py  lifespan.py  process_file.py  utils.py
cobwebai/utils/: auth.py  database.py
deploy/: docker-compose.dev.yml
migrations/: env.py
migrations/versions/: 2024_11_24_2307-88682b290e25_initial_migration.py  2024_12_02_0029-f491dd9618d5_initial_migration.py
tests/: __init__.py  conftest.py  test_file_repository.py  test_note_repository.py  test_project_repository.py  test_user_repository.py
