[tool.poetry]
name = "cobwebai"
version = "0.1.0"
description = ""
authors = ["SERGEYDJUM <39106181+SERGEYDJUM@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic-settings = "^2.6.1"
yarl = "^1.18.3"
loguru = "^0.7.2"
asyncpg = "^0.30.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = "-v"
filterwarnings = "ignore"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

